# jsling

./: .gitignore  CPP_IMPLEMENTATION.md  INSTALL.md  README.md  build-installer.bat  jsling.iss  run.bat
COMPILER_CPP/: .gitignore  CMakeLists.txt  build-windows-installer.sh  test_all.js
COMPILER_CPP/include/jsling/: ast.hpp  builtins.hpp  cli.hpp  environment.hpp  errors.hpp  inspect.hpp  interpreter.hpp  lexer.hpp  parser.hpp  token.hpp  value.hpp
COMPILER_CPP/scripts/: build.bat  build.sh  install-local.sh  install-windows.ps1  run-hackathon-testcase.bat  run-hackathon-testcase.sh  run-hackathon-tests.sh  run-tests.bat  run-tests.sh
COMPILER_CPP/src/: ast.cpp  builtins.cpp  cli.cpp  environment.cpp  errors.cpp  inspect.cpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  token.cpp  value.cpp
COMPILER_CPP/tests/: test.expected  test.js  test1_closures_hof.expected  test1_closures_hof.js  test1_closures_hof.skip  test2_destructuring_spread.js  test2_destructuring_spread.skip  test3_control_coercion_math.expected  test3_control_coercion_math.js  test3_control_coercion_math.skip  test4_classes_errors.js  test4_classes_errors.skip  test_arrays.expected  test_arrays.js  test_arrow_spread_rest.expected  test_arrow_spread_rest.js  test_basics.expected  test_basics.js  test_builtins.expected  test_builtins.js  test_control.expected  test_control.js  test_float.expected  test_float.js  test_functions.expected  test_functions.js  test_objects.expected  test_objects.js  test_strings.expected  test_strings.js
COMPILER_CPP/tests/hackathon/: tc1_odd_even.expected
(+6 files in other folders)
